<GridLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:columnCount="2"
    android:padding="@dimen/spacing_large">

    <TextView
        style="@style/GridCell"
        android:text="@string/type"
        android:textStyle="bold" />

    <TextView
        style="@style/GridCell"
        android:text="@string/value"
        android:textStyle="bold" />

    <TextView
        style="@style/GridCell"
        android:text="@string/_int" />

    <TextView
        android:id="@+id/int_value_text"
        style="@style/GridCell" />

    <TextView
        style="@style/GridCell"
        android:text="@string/_long" />

    <TextView
        android:id="@+id/long_value_text"
        style="@style/GridCell" />

    <TextView
        style="@style/GridCell"
        android:text="@string/_float" />

    <TextView
        android:id="@+id/float_value_text"
        style="@style/GridCell" />

    <TextView
        style="@style/GridCell"
        android:text="@string/_boolean" />

    <TextView
        android:id="@+id/boolean_value_text"
        style="@style/GridCell" />

    <TextView
        style="@style/GridCell"
        android:text="@string/string" />

    <TextView
        android:id="@+id/string_value_text"
        style="@style/GridCell" />
</GridLayout>
